--- a/static/css/t_main.css
+++ b/static/css/t_main.css
@@ -12,7 +12,7 @@
 } */
 
 /* 반응형 */ 
-@media (max-width: 700px){
+/* @media (max-width: 700px){
     .teacher {
         display: flex;
         width: 100%;
@@ -110,4 +110,4 @@
 .teacher-content-field {
     flex-direction: row;
     display: flex;
-}
+} */
