--- a/teacher/static/css/t_main.css
+++ b/teacher/static/css/t_main.css
@@ -1,61 +1,52 @@
-/* .teacher {
+body {
+    background: #f5f5f5;
+}
+
+.teacher-container {
+    max-width: 750px;
+    margin-top: 40px;
+}
+
+.tp-title {
+    font-size: 30px;
+    color: #FD6F22;
+    font-weight: bold;
+    padding-top: 10;
+}
+
+.teacher-path {
+    width: 23%;
+    height: 30px;
     display: flex;
-    width: 67%
-}
-.teacher-side {
-    width: 30%;
-} */
-
-/* .teacher-content {
-    background-color: beige;
-    width: 70%;
-} */
-
-/* 반응형 */ 
-/* @media (max-width: 700px){
-    .teacher {
-        display: flex;
-        width: 100%;
-    }
+    margin-left: 5%;
+    justify-content: space-between;
 }
 
-.teacher {
-    align-items: center;
-    justify-content: center;
+.teacher-path-letter span {
+    color: #5b5b5b;
+    font-size: 17px;
+}
+
+.teacher-path-icon img {
+    width: 20px;
+}
+
+.teacher-path-letter {
+    font-size: 18;
 }
 
 .teacher-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 25% 0;
-}
-
-.teacher-path {
-    width: 240px;
-    height: 30px;
-    display: flex;
-    padding: 5 5 5 5;
-}
-
-.teacher-path-icon img{
-    width: 20px;
-}
-
-.teacher-path-letter {
-    font-size: 18;
-    margin: 8;
 }
 
 .teacher-create {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: white;
     border-radius: 20px;
-    height: 45px;
-    width: 120px;
+    width: 13%;
     box-shadow: 3px 3px 2px rgb(185, 185, 185);
+    margin-right: 5%;
 }
 
 .teacher-create-link {
@@ -68,46 +59,109 @@
     font-weight: 700;
 }
 
-
 .teacher-content-all {
-    align-items: center;
-    padding: 0 25% 0;
+    padding: 10;
+    margin-top: 10;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 }
 
 .teacher-content-one {
-    display: flex;
-    padding: 0 25% 0;
-    
     background-color: white;
     border-radius: 20px;
-    height: 20%;
-    width: 35%;
     box-shadow: 3px 3px 2px rgb(185, 185, 185);
     margin: 15;
+    width: 45%;
+    height: 220px;
 
-    align-items: center;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
 }
 
-.teacher-content-img img{
+.t-img-letters {
     display: flex;
-    width: 100;
-    height: 100;
+}
+
+.teacher-content-img {
+    width: 110px;
+    height: 110px;
+    background-color: #b9b9b9;
+    border-radius: 15px;
+    margin-top: 15;
+    margin-left: 15;
+    margin-right: 15;
+}
+
+.teacher-content-img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
 }
 
 .teacher-content-letter {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 5;
+}
+
+.teacher-content-letter span {
+    font-size: 18;
+}
+
+.teacher-content-letter span img {
+    width: 18px;
+    height: 18px;
+    margin-right: 5;
+}
+
+
+.teacher-content-field {
+    color: #fd945b;
+    font-weight: bold;
 }
 
 .teacher-content-title {
-    flex-direction: row;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-weight: bold;
+    
+  width: 100%; /* 새로 추가 */
+  margin-top: 10px; /* 새로 추가 */
+  text-align: center; /* 새로 추가 */
 }
 
-.teacher-content-field {
-    flex-direction: row;
-    display: flex;
-} */
+.tt-title {
+    font-size: 20;
+}
+
+.tt-title a {
+    color: #d8672a;
+}
+
+
+/* 반응형 모바일*/
+@media (max-width: 650px) {
+    .teacher-content-one {
+        margin: 15;
+        width: 85%;
+        height: 220px;
+    
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+
+    .teacher-path-letter span {
+        font-size: 10px;
+    }
+}
+
+
+.footer {
+    background-color: #000000;
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 50px !important;
+}
