--- a/teacher/templates/t_main.html
+++ b/teacher/templates/t_main.html
@@ -15,64 +15,58 @@
   </style>
 </head>
 
-<!-- <div class = "teacher mx-auto">
-  <div class = "teacher-side bg-light">
-    <nav class = "navbar">
-      이게머지..
-    </nav>
-  </div>
-  
-  <div class = "teacher-content">
-    모집글들
-  </div>
-</div> -->
 
-<h1>모연 선생님</h1>
+
 <div class="teacher">
 
-  <div class="teacher-top">
-    <div class="teacher-path">
-      <div class="teacher-path-icon">
-        <img src="{% static 'image/homeIcon.png' %}">
+  <div class="teacher-container mx-auto">
+
+    <span class="tp-title">모연 선생님</span>
+    <div class="teacher-top">
+      <div class="teacher-path">
+        <div class="teacher-path-icon">
+          <img src="{% static 'image/homeIcon.png' %}">
+        </div>
+        <div class="teacher-path-letter">
+          <span>메인 > 모연 선생님</span>
+        </div>
       </div>
-      <div class="teacher-path-letter">
-        <span>메인 > 모연 선생님</span>
+      <div class="teacher-create">
+        <a class="teacher-create-link" href="{% url 't_c' %}">글쓰기</a>
       </div>
     </div>
 
-    <div class="teacher-create">
-      <a class="teacher-create-link" href="{% url 't_c' %}">글쓰기</a>
+    <div class="teacher-content-all">
+      {% for teachers in teachers.all %}
+      <div class="teacher-content-one">
+
+        <div class="t-img-letters">
+          <div class="teacher-content-img">
+            {% if teachers.photo %}
+            <img src="{{ teachers.photo.url }}" alt="iamge" width="150" height="150">
+            {% endif %}
+          </div>
+          <div class="teacher-content-letter">
+            <div class="teacher-content-field">
+              <span>{{ teachers.field }}</span>
+            </div>
+            <div class="teacher-content-region">
+              <span><img src="{% static 'image/mapIcon.png' %}">{{ teachers.region }}</span>
+            </div>
+            <div class="teacher-content-number">
+              <span><img src="{% static 'image/followicon.png' %}">모집 인원 {{ teachers.number }}</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="teacher-content-title">
+          <span class="tt-title"><a href="{% url 't_r' teachers.id %}">{{ teachers.title }}</a></span>
+        </div>
+      </div>
+      {% endfor %}
     </div>
   </div>
-
-
-  <div class="teacher-content-all">
-    {% for teachers in teachers.all %}
-    <div class="teacher-content-one">
-      <div class="teacher-content-img">
-        {% if teachers.photo %}
-        <img src="{{ teachers.photo.url }}" alt="iamge" width="150" height="150">
-        {% endif %}
-      </div>
-
-      <div class="teacher-content-letter">
-        <div class="teacher-content-field">
-          <span>{{ teachers.field }}</span>
-        </div>
-        <div class="teacher-content-region">
-          <span>{{ teachers.region }}</span>
-        </div>
-        <div class="teacher-content-number">
-          <span>지원 /{{ teachers.number }}</span>
-        </div>
-      </div>
-
-      <div class="teacher-content-title">
-        <span><a href="{% url 't_r' teachers.id %}">{{ teachers.title }}</a></span>
-      </div>
-    </div>
-    {% endfor %}
-    </div>
-    {% endblock %}
-  
 </div>
+
+
+{% endblock %}
