--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -59,7 +59,7 @@
                 <ul class="nav col-lg-auto justify-content-center">
                     <li><a href="{% url 'introduce_main' %}" style="color:#fd945b" class="nav-link px-2.5">모연하다 소개</a></li>
                     <li><a href="{% url 't_main' %}" style="color:#fd945b" class="nav-link px-2.5">모연 선생님</a></li>
-                    <li><a href="" style="color:#fd945b" class="nav-link px-2.5">모연 배우미</a></li>
+                    <li><a href="{% url 's_main' %}" style="color:#fd945b" class="nav-link px-2.5">모연 배우미</a></li>
                     <li><a href="{% url 'oneday_main' %}" style="color:#fd945b" class="nav-link px-2.5">체험활동</a></li>
                     
                     {% if user.is_active %}
