--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -60,18 +60,70 @@
     <div class = "main-content3 d-flex flex-column justify-content-center mx-auto">
       <p class = "inner-text1"> <b>모연하다</b>에는 어떤 글들이 올라오나요?</p>
 
-      <!-- <div class = "main-content3_wrap d-flex flex-row my-auto">
-        <div class = "main-content3_box1">
-          <p class = "inner-text1" style="text-align: left;"><b> 원하는 시간, 원하는 수업을 <br> 소수정예로</b></p>
-          <p class = "inner-text4" style="text-align: left;"> <b> 모연 배우미</b> 에 배우고 싶은 수업을, <br>
-            내가 수업을 받고 싶은 시간을 작성해주시면 <br>
-            모연 선생님이 차례차례 연락을 주실거에요 :) <br>
-          </p>
+      <div class="flip_box d-flex flex-column">
+        <div class="cols d-flex flex-row mx-auto">
+          <div class="col">
+            <div class="flip">
+              <div class="front">
+                <img src="https://cdn.sisaweek.com/news/photo/202211/200545_200430_4834.jpg" alt="">
+              </div>
+              <div class="back">
+                  <div class="inner">
+                    <p class = "inner-text1"> <b>휴대전화</b> </p>
+                    <hr>
+                    <p class = "inner-text4"> <b> #아이폰 #갤럭시 </b></p>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="flip">
+              <div class="front">
+                <img src="https://cdn.foodnews.co.kr/news/photo/202110/94179_54762_1837.jpg" alt="">
+              </div>
+              <div class="back">
+                <div class="inner">
+                  <p class = "inner-text1"> <b>키오스크</b> </p>
+                  <hr>
+                  <p class = "inner-text4"> <b> #맥도날드 #스타벅스 </b></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class = "main-content3_box2">
-          <img src="{% static 'img/phone.jpg' %}" alt="모연하다 메인 채팅" class="mainIntro-img">
+
+        <div class="cols d-flex flex-row">
+          <div class="col">
+            <div class="flip">
+              <div class="front">
+                <img src="https://health.chosun.com/site/data/img_dir/2023/05/09/2023050901855_0.jpg" alt="">
+              </div>
+              <div class="back">
+                <div class="inner">
+                  <p class = "inner-text1"> <b>인터넷</b> </p>
+                  <hr>
+                  <p class = "inner-text4"> <b> #이메일 #홈페이지 </b></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="flip">
+              <div class="front">
+                <img src="https://img.hankyung.com/photo/202111/BD.28154690.1.jpg" alt="">
+              </div>
+              <div class="back">
+                <div class="inner">
+                  <p class = "inner-text1"> <b>생활편의</b> </p>
+                  <hr>
+                  <p class = "inner-text4"> <b> #생활편의 #힐링 </b></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div> -->
+
+      </div>
     </div>
   </div>
 </div>
