--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -55,21 +55,82 @@ img.chat-img {
 }
 
 .main-content3 {
+    width: 95%;
     margin-top: 4%;
     margin-bottom: 4%;
 }
 
-.main-content3-box {
-    padding: 1.5% 7%;
+.flip_box {
+	width: 90%;
+	margin: 0 auto;
 }
 
-img.mainIntro-img {
-    width: 50%;
-    margin: 1%;
+.cols {
+    width: 80%;
+}
+
+.col {
+    width: 40%;
+	cursor: pointer;
+}
+
+.flip {
+    position: relative;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    margin: 5%;
+}
+
+.col:hover .flip {
+    transform: rotateY(180deg);
+}
+
+.front,
+.back {
+	background-size: cover;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	background-position: center;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	text-align: center;
+	color: #fff;
+	font-size: 1.5rem;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+}
+
+.front {
+    background-color: #bbb;
+    color: black;
+}
+
+  /* Style the back side */
+.back {
+    position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+    color: white;
+    background: -webkit-linear-gradient(65deg, #f5e3c5 0%, #974507 100%);
+    transform: rotateY(180deg);
+}
+
+.front > img {
+    width: 100%;
+    border-radius: 10px;
+    opacity: 0.5;
+}
+
+.back > .inner {
+    margin: 20%;
+    padding: 0 auto;
 }
 
 /* 반응형 패드 */
-@media (max-width:900px) {
+@media screen and (max-width:900px) {
     .main-content1 {
         margin-top: 6%;
         margin-bottom: 3%;
@@ -98,7 +159,7 @@ img.mainIntro-img {
 }
 
 /* 반응형 모바일 */
-@media (max-width:500px) {
+@media screen and (max-width:500px) {
     .main-content1 {
         margin-top: 3%;
         margin-bottom: 1%;
@@ -142,5 +203,14 @@ img.mainIntro-img {
 
     .inner-text4 {
         font-size: 1.9vw;
+    }
+
+    .back > .inner {
+        margin: 5%;
+        padding: 0;
+    }
+
+    .back > .inner > .inner-text1 {
+        font-size: 3vw;
     }
 }
